--- a/asset/css/website.css
+++ b/asset/css/website.css
@@ -2,17 +2,33 @@ ul {
     list-style: disc;
 }
 
+u {
+    text-decoration: underline;
+}
+
+image-block {
+    display: block;
+}
+
+paragraph {
+    display: block;
+}
+
 .main-container {
     padding: 0 5%;
     margin: 2em 0em 1em 0em;
 }
 
-.main-container>p,
+.main-container>paragraph,
 .main-container>ul,
-.main-container>img {
+.main-container>image-block {
     margin: 0.5em 0em 0em 0em;
 }
 
 .main-container>ul {
     margin-left: 3em;
+}
+
+.text-center {
+    text-align: center;
 }
