--- a/asset/css/website.css
+++ b/asset/css/website.css
@@ -14,6 +14,15 @@ paragraph {
     display: block;
 }
 
+.main-toc > .item {
+    padding: 0.2em 0em 0.2em 1em;
+}
+
+.main-toc > .item:hover {
+    background-color: beige;
+    cursor: pointer;
+}
+
 .main-container {
     padding: 0 5%;
     margin: 2em 0em 1em 0em;
@@ -27,8 +36,4 @@ paragraph {
 
 .main-container>ul {
     margin-left: 3em;
-}
-
-.text-center {
-    text-align: center;
 }
